fix: Fix timeline alignment on mobile

--- a/app/ps/ps.css
+++ b/app/ps/ps.css
@@ -25,17 +25,13 @@
 .ps_div_img{
     display: flex;
     width: 50%;
-    align-items: start;
+    align-items: center;
     justify-content: center;
     margin-top: 20px;
     
 }
 
 .ps_img{
-    background-color: antiquewhite;
-    height: 400px;
-    width: 400px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .text2{
@@ -57,8 +53,6 @@
 .content3{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 50%;
 }
 
 .info_edital{
@@ -122,10 +116,15 @@
         gap: 40px;
     }
 
-    .content2{
-        margin: 80px 60px 200px;
+    .content2 {
+        margin: 80px 60px 400px;
+        font-size: 0.9rem;
     }
 
+    .content3 {
+        flex-direction: column;  /* Ensure the content stacks vertically */
+        height: auto;
+    }
     .text, .ps_div_img {
         width: 100%;
         align-items: center;
@@ -134,6 +133,7 @@
 
     .ps_div_img {
         margin-top: 0;
+        width: 100%;
     }
 
 
@@ -165,11 +165,11 @@
 
     .content2{
         flex-direction: column;
-        margin-bottom: 200px;
+        margin-bottom: 400px;
     }
 
     .content3{
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
         gap: 50px;
     }
@@ -202,6 +202,10 @@
     .text2{
         margin-top: 50px;
     }
+    .ps_div_img {
+        margin-top: 0;
+        width: 100%;
+    }
 
 }
 
@@ -211,7 +215,7 @@
     }
 
     .content2{
-        margin-bottom: 500px;
+        margin-bottom: 700px;
     }
 
     .text2{
@@ -226,14 +230,14 @@
         font-size: 0.9rem;
     }
 
-    .ps_img {
-        width: 200px;
-        height: 200px;
-    }
-
     .edital{
         margin-top: 150px;
     }
+    .ps_div_img {
+        margin-top: 0;
+        width: 100%;
+    }
+
 
 }
 
@@ -259,10 +263,6 @@
           margin-top: 10px !important;
         }
       
-        .ps_img {
-          width: 280px !important;
-          height: 280px !important;
-        }
       
         .content2 {
           flex-direction: column !important;
